--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gatsby-plugin-react-helmet-canonical-urls": "^1.2.0",
     "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-sharp": "^2.2.1",
-    "gatsby-source-filesystem": "^2.1.0",
+    "gatsby-source-filesystem": "^2.1.6",
+    "gatsby-transformer-json": "^2.2.2",
     "gatsby-transformer-sharp": "^2.2.0",
     "js-search": "^1.4.3",
     "node-sass": "^4.12.0",
