--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "depd": "^2.0.0",
+    "eslint-plugin-graphql": "^3.0.3",
     "gatsby": "^2.10.4",
     "gatsby-image": "^2.2.3",
     "gatsby-plugin-manifest": "^2.2.0",
@@ -22,7 +23,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "scroll": "^3.0.1",
+    "smooth": "^0.1.1-alpha.56",
+    "smooth-scroll": "^16.1.0"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
