--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
+    "bootstrap": "^4.3.1",
     "depd": "^2.0.0",
     "eslint-plugin-graphql": "^3.0.3",
     "gatsby": "^2.10.4",
@@ -22,6 +23,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "scroll": "^3.0.1",
