--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-media": "^1.9.2",
     "scroll": "^3.0.1",
     "smooth": "^0.1.1-alpha.56",
     "smooth-scroll": "^16.1.0"
