--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Revolut App & Card Review 2019 – Guide & Revolut Casinos",
+  "name": "gatsby-starter-default",
   "private": true,
-  "description": "Find out more about Revolut Online Payment services. Read the full guide 2019 about Revolut App, Card and Revolut Online Casinos.",
+  "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
-  "author": "SEO boss",
+  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^2.3.0",
     "bootstrap": "^4.3.1",
